<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>cz.datalite.dlAresService</groupId>
   <artifactId>dlAresService</artifactId>
   <version>1.0.0</version>
   <name>dlAresService</name>
   <packaging>jar</packaging>

   <parent>
      <groupId>cz.datalite</groupId>
      <artifactId>dl-zk-spring</artifactId>
      <version>1.4.5-SNAPSHOT</version>
   </parent>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
   </properties>



   <dependencies>
      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.4</version>
      </dependency>

      <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
         <version>4.5.3</version>
      </dependency>

   </dependencies>


   <build>

      <resources>
         <resource>
            <filtering>true</filtering>
            <directory>src/main/resources</directory>
         </resource>
         <resource>
            <!-- binary resources with no filtering (filtering breaks excel files) -->
            <filtering>false</filtering>
            <directory>src/main/resources-bin</directory>
         </resource>
      </resources>
      <testResources>
         <testResource>
            <filtering>true</filtering>
            <directory>src/test/resources</directory>
         </testResource>
      </testResources>

      <plugins>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>2.5.1</version>
            <configuration>
               <source>1.7</source>
               <target>1.7</target>
               <encoding>${project.build.sourceEncoding}</encoding>
            </configuration>
         </plugin>

         <plugin>
            <!-- Overwrite version 2.2 in parent -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>2.6</version>
            <configuration>
               <encoding>${project.build.sourceEncoding}</encoding>
            </configuration>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.18.1</version>
            <configuration>
               <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
            </configuration>
         </plugin>


      </plugins>

      <pluginManagement>
         <plugins>

         </plugins>
      </pluginManagement>
   </build>

</project>
